--- a/style.css
+++ b/style.css
@@ -151,16 +151,23 @@ body {
   background-color: rgb(17, 112, 30);
   width: 97.9%;
   padding: 12px;
-  
+      height: 50px;
+          display: flex
+;
+    align-content: space-evenly;
+    flex-wrap: nowrap;
+    gap: 95vh;
 }
 .songbutton{
   display: flex;
   justify-content: center;
   height:35px;
   gap: 56px;
+      margin-top: 12px;
 }
 .songbutton img{
-  height: 100%;
+  height: 90%;
+  cursor: pointer;
 }
 .songlist ul{
   padding: 0px 32px;
@@ -190,11 +197,13 @@ body {
 }
 .seekbar{
   height: 2px;
-  width: 97.8%;
+  width: 99.8%;
   border: 2px solid white;
   border-radius: 10px;
   position: absolute;
-  top: 0;
+      bottom: 71px;
+      position: absolute;
+    z-index: 1;
 }
 .circle{
   width: 20px;
